# AI_SportCamera

./: BUILD_README.md  BUILD_README_CN.md  README.md  README_CN.md
Hardware/Project_for_DVP/: ProPrj_V851 yolo_2026-06-18.epro2
Hardware/Project_for_MIPI/: ProPrj_V851S_board_2026-06-23.epro2
TinaSDKv5.0/Project_for_DVP/device/config/chips/v851s/configs/nopiskl/: board.dts
TinaSDKv5.0/Project_for_DVP/patch/kernel/: 802-nopiskl-st7789v.patch
TinaSDKv5.0/Project_for_MIPI/brandy/brandy-2.0/u-boot-2018/configs/: sun8iw21p1_defconfig
TinaSDKv5.0/Project_for_MIPI/nopiskl_external/yolov5_opencv_gc2053/: Makefile  main.cpp
TinaSDKv5.0/Project_for_MIPI/nopiskl_external/yolov5_opencv_gc2053/include/: CMakeLists.txt  Makefile
TinaSDKv5.0/Project_for_MIPI/nopiskl_external/yolov5_opencv_gc2053/isp/include/: isp_comm.h  isp_debug.h  isp_manage.h  isp_version.h
TinaSDKv5.0/Project_for_MIPI/nopiskl_external/yolov5_opencv_gc2053/isp/include/device/: isp_dev.h
TinaSDKv5.0/Project_for_MIPI/nopiskl_external/yolov5_opencv_gc2053/src/: cap.cpp  image_utils.c  vnn_pre_process.c
TinaSDKv5.0/Project_for_MIPI/openwrt/package/nopiskl/camerademo_self/: Makefile
TinaSDKv5.0/Project_for_MIPI/openwrt/package/nopiskl/camerademo_self/src/: Makefile  main.cpp
TinaSDKv5.0/Project_for_MIPI/openwrt/package/nopiskl/opencv/patches/: 901-VIN-ENABLE-HARD.patch
